# web_chat_v2

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6212fa063c92_add_user_and_message_models.py  65d0e7ff8b3a_pls.py  9dc23a73fa39_update_msg_model.py  d998902b9158_first.py  e7a560875609_delete_resevier_field.py
db/: crud.py  db.py  messages.py  models.py  users.py  utils.py
db/repositoryes/: message_repository.py  user_repository.py
routes/: api.py  authorization.py  messages.py  routes.py  templates.py  users.py
schemas/: schemas.py
scripts/: register.js
service/: autorization_service.py  message_service.py  service.py  users_service.py
templates/: chat.html  login.html  register.html
utils/: utils.py
