[tool.poetry]
name = "web-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
unicorn = "^2.0.1.post1"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = "^2.5.1"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
python-jose = "^3.3.0"
websockets = "^12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
types-python-jose = "^3.3.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
